Fix broken style rule due to changed CSS specificity.

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -520,7 +520,7 @@ html[lang=ja] header.navbar {
             padding: 16px 20px !important;
         }
 
-        .navbar-menu-toolbar {
+        .navbar-collapse .navbar-menu-toolbar {
             display: block;
             width: 100%;
             height: 60px;
